# serializer version: 1
# name: test_han_batzle_live_oil_density
  '''
  [7.08592223e+02 7.08461314e+02 7.08330278e+02 7.08199117e+02
   7.08067833e+02 7.07936426e+02 7.07804899e+02 7.07673252e+02
   7.07541488e+02 7.07409607e+02 7.07277611e+02 7.07145501e+02
   7.07013280e+02 7.06880947e+02 7.06748504e+02 7.06615953e+02
   7.06483294e+02 7.06350529e+02 7.06217659e+02 7.06084685e+02
   7.05951609e+02 7.05818430e+02 7.05685151e+02 7.05551773e+02
   7.05418296e+02 7.05284721e+02 7.05151050e+02 7.05017283e+02
   7.04883421e+02 7.04749466e+02 7.04615418e+02 7.04481278e+02
   7.04347046e+02 7.04212725e+02 7.04078314e+02 7.03943814e+02
   7.03809227e+02 7.03674553e+02 7.03539792e+02 7.03404946e+02
   7.03270015e+02 7.03134999e+02 7.02999901e+02 7.02864720e+02
   7.02729457e+02 7.02594112e+02 7.02458687e+02 7.02323181e+02
   7.02187597e+02 7.02051933e+02 7.01916191e+02 7.01780372e+02
   7.01644475e+02 7.01508502e+02 7.01372453e+02 7.01236329e+02
   7.01100129e+02 7.00963855e+02 7.00827508e+02 7.00691086e+02
   7.00554592e+02 7.00418026e+02 7.00281387e+02 7.00144677e+02
   7.00007896e+02 6.99871045e+02 6.99734123e+02 6.99597131e+02
   6.99460070e+02 6.99322940e+02 6.99185741e+02 6.99048474e+02
   6.98911139e+02 6.98773737e+02 6.98636267e+02 6.98498731e+02
   6.98361128e+02 6.98223459e+02 6.98085725e+02 6.97947925e+02
   6.97810059e+02 6.97672129e+02 6.97534135e+02 6.97396076e+02
   6.97257953e+02 6.97119767e+02 6.96981517e+02 6.96843204e+02
   6.96704829e+02 6.96566390e+02 6.96427890e+02 6.96289327e+02
   6.96150702e+02 6.96012016e+02 6.95873268e+02 6.95734459e+02
   6.95595589e+02 6.95456659e+02 6.95317668e+02 6.95178616e+02
   6.95039505e+02]
  '''
# ---
# name: test_han_batzle_live_oil_velocity
  '''
  [1.06877712e+03 1.06826099e+03 1.06774698e+03 1.06723510e+03
   1.06672535e+03 1.06621772e+03 1.06571222e+03 1.06520884e+03
   1.06470760e+03 1.06420847e+03 1.06371148e+03 1.06321661e+03
   1.06272387e+03 1.06223325e+03 1.06174477e+03 1.06125840e+03
   1.06077417e+03 1.06029206e+03 1.05981208e+03 1.05933422e+03
   1.05885849e+03 1.05838489e+03 1.05791341e+03 1.05744406e+03
   1.05697684e+03 1.05651174e+03 1.05604877e+03 1.05558793e+03
   1.05512921e+03 1.05467262e+03 1.05421816e+03 1.05376582e+03
   1.05331561e+03 1.05286753e+03 1.05242157e+03 1.05197774e+03
   1.05153603e+03 1.05109645e+03 1.05065900e+03 1.05022368e+03
   1.04979048e+03 1.04935941e+03 1.04893046e+03 1.04850364e+03
   1.04807895e+03 1.04765638e+03 1.04723594e+03 1.04681763e+03
   1.04640144e+03 1.04598738e+03 1.04557545e+03 1.04516564e+03
   1.04475796e+03 1.04435241e+03 1.04394898e+03 1.04354768e+03
   1.04314851e+03 1.04275146e+03 1.04235654e+03 1.04196374e+03
   1.04157307e+03 1.04118453e+03 1.04079812e+03 1.04041383e+03
   1.04003167e+03 1.03965163e+03 1.03927372e+03 1.03889794e+03
   1.03852429e+03 1.03815276e+03 1.03778335e+03 1.03741608e+03
   1.03705093e+03 1.03668790e+03 1.03632701e+03 1.03596824e+03
   1.03561159e+03 1.03525708e+03 1.03490469e+03 1.03455442e+03
   1.03420628e+03 1.03386027e+03 1.03351639e+03 1.03317463e+03
   1.03283500e+03 1.03249750e+03 1.03216212e+03 1.03182887e+03
   1.03149774e+03 1.03116874e+03 1.03084187e+03 1.03051712e+03
   1.03019451e+03 1.02987401e+03 1.02955565e+03 1.02923941e+03
   1.02892529e+03 1.02861331e+03 1.02830345e+03 1.02799571e+03
   1.02769011e+03]
  '''
# ---
# name: test_live_oil_batzle_wang
  tuple(
    '''
      [9.79594672e+02 9.79103580e+02 9.78616566e+02 9.78133636e+02
       9.77654793e+02 9.77180044e+02 9.76709392e+02 9.76242843e+02
       9.75780400e+02 9.75322070e+02 9.74867857e+02 9.74417765e+02
       9.73971799e+02 9.73529964e+02 9.73092265e+02 9.72658707e+02
       9.72229294e+02 9.71804031e+02 9.71382923e+02 9.70965975e+02
       9.70553191e+02 9.70144577e+02 9.69740136e+02 9.69339874e+02
       9.68943795e+02 9.68551904e+02 9.68164206e+02 9.67780706e+02
       9.67401409e+02 9.67026318e+02 9.66655439e+02 9.66288777e+02
       9.65926336e+02 9.65568121e+02 9.65214137e+02 9.64864389e+02
       9.64518880e+02 9.64177617e+02 9.63840603e+02 9.63507844e+02
       9.63179344e+02 9.62855107e+02 9.62535140e+02 9.62219445e+02
       9.61908028e+02 9.61600894e+02 9.61298048e+02 9.60999494e+02
       9.60705236e+02 9.60415280e+02 9.60129630e+02 9.59848291e+02
       9.59571267e+02 9.59298564e+02 9.59030186e+02 9.58766137e+02
       9.58506423e+02 9.58251048e+02 9.58000017e+02 9.57753334e+02
       9.57511004e+02 9.57273032e+02 9.57039422e+02 9.56810179e+02
       9.56585309e+02 9.56364814e+02 9.56148701e+02 9.55936974e+02
       9.55729637e+02 9.55526695e+02 9.55328153e+02 9.55134016e+02
       9.54944287e+02 9.54758973e+02 9.54578076e+02 9.54401603e+02
       9.54229558e+02 9.54061945e+02 9.53898769e+02 9.53740035e+02
       9.53585747e+02 9.53435910e+02 9.53290528e+02 9.53149607e+02
       9.53013151e+02 9.52881164e+02 9.52753652e+02 9.52630618e+02
       9.52512068e+02 9.52398005e+02 9.52288436e+02 9.52183363e+02
       9.52082793e+02 9.51986729e+02 9.51895176e+02 9.51808139e+02
       9.51725623e+02 9.51647631e+02 9.51574169e+02 9.51505242e+02
       9.51440853e+02]
    ''',
    '''
      [7.02134661e+02 7.01875429e+02 7.01616337e+02 7.01357386e+02
       7.01098576e+02 7.00839907e+02 7.00581379e+02 7.00322991e+02
       7.00064744e+02 6.99806637e+02 6.99548671e+02 6.99290845e+02
       6.99033160e+02 6.98775615e+02 6.98518211e+02 6.98260946e+02
       6.98003822e+02 6.97746838e+02 6.97489993e+02 6.97233289e+02
       6.96976725e+02 6.96720301e+02 6.96464016e+02 6.96207872e+02
       6.95951867e+02 6.95696001e+02 6.95440275e+02 6.95184689e+02
       6.94929242e+02 6.94673935e+02 6.94418767e+02 6.94163739e+02
       6.93908849e+02 6.93654099e+02 6.93399488e+02 6.93145016e+02
       6.92890683e+02 6.92636489e+02 6.92382434e+02 6.92128518e+02
       6.91874740e+02 6.91621102e+02 6.91367602e+02 6.91114240e+02
       6.90861017e+02 6.90607933e+02 6.90354987e+02 6.90102180e+02
       6.89849510e+02 6.89596979e+02 6.89344586e+02 6.89092332e+02
       6.88840215e+02 6.88588237e+02 6.88336396e+02 6.88084693e+02
       6.87833128e+02 6.87581701e+02 6.87330412e+02 6.87079260e+02
       6.86828246e+02 6.86577369e+02 6.86326630e+02 6.86076028e+02
       6.85825564e+02 6.85575237e+02 6.85325047e+02 6.85074994e+02
       6.84825078e+02 6.84575300e+02 6.84325658e+02 6.84076153e+02
       6.83826785e+02 6.83577554e+02 6.83328460e+02 6.83079502e+02
       6.82830681e+02 6.82581996e+02 6.82333448e+02 6.82085037e+02
       6.81836761e+02 6.81588622e+02 6.81340620e+02 6.81092753e+02
       6.80845022e+02 6.80597428e+02 6.80349969e+02 6.80102647e+02
       6.79855460e+02 6.79608409e+02 6.79361494e+02 6.79114714e+02
       6.78868070e+02 6.78621562e+02 6.78375189e+02 6.78128951e+02
       6.77882849e+02 6.77636882e+02 6.77391050e+02 6.77145353e+02
       6.76899792e+02]
    ''',
  )
# ---
# name: test_live_oil_density
  '''
  [7.02134661e+02 7.01875429e+02 7.01616337e+02 7.01357386e+02
   7.01098576e+02 7.00839907e+02 7.00581379e+02 7.00322991e+02
   7.00064744e+02 6.99806637e+02 6.99548671e+02 6.99290845e+02
   6.99033160e+02 6.98775615e+02 6.98518211e+02 6.98260946e+02
   6.98003822e+02 6.97746838e+02 6.97489993e+02 6.97233289e+02
   6.96976725e+02 6.96720301e+02 6.96464016e+02 6.96207872e+02
   6.95951867e+02 6.95696001e+02 6.95440275e+02 6.95184689e+02
   6.94929242e+02 6.94673935e+02 6.94418767e+02 6.94163739e+02
   6.93908849e+02 6.93654099e+02 6.93399488e+02 6.93145016e+02
   6.92890683e+02 6.92636489e+02 6.92382434e+02 6.92128518e+02
   6.91874740e+02 6.91621102e+02 6.91367602e+02 6.91114240e+02
   6.90861017e+02 6.90607933e+02 6.90354987e+02 6.90102180e+02
   6.89849510e+02 6.89596979e+02 6.89344586e+02 6.89092332e+02
   6.88840215e+02 6.88588237e+02 6.88336396e+02 6.88084693e+02
   6.87833128e+02 6.87581701e+02 6.87330412e+02 6.87079260e+02
   6.86828246e+02 6.86577369e+02 6.86326630e+02 6.86076028e+02
   6.85825564e+02 6.85575237e+02 6.85325047e+02 6.85074994e+02
   6.84825078e+02 6.84575300e+02 6.84325658e+02 6.84076153e+02
   6.83826785e+02 6.83577554e+02 6.83328460e+02 6.83079502e+02
   6.82830681e+02 6.82581996e+02 6.82333448e+02 6.82085037e+02
   6.81836761e+02 6.81588622e+02 6.81340620e+02 6.81092753e+02
   6.80845022e+02 6.80597428e+02 6.80349969e+02 6.80102647e+02
   6.79855460e+02 6.79608409e+02 6.79361494e+02 6.79114714e+02
   6.78868070e+02 6.78621562e+02 6.78375189e+02 6.78128951e+02
   6.77882849e+02 6.77636882e+02 6.77391050e+02 6.77145353e+02
   6.76899792e+02]
  '''
# ---
# name: test_live_oil_han_batzle
  tuple(
    '''
      [1.06877712e+03 1.06826099e+03 1.06774698e+03 1.06723510e+03
       1.06672535e+03 1.06621772e+03 1.06571222e+03 1.06520884e+03
       1.06470760e+03 1.06420847e+03 1.06371148e+03 1.06321661e+03
       1.06272387e+03 1.06223325e+03 1.06174477e+03 1.06125840e+03
       1.06077417e+03 1.06029206e+03 1.05981208e+03 1.05933422e+03
       1.05885849e+03 1.05838489e+03 1.05791341e+03 1.05744406e+03
       1.05697684e+03 1.05651174e+03 1.05604877e+03 1.05558793e+03
       1.05512921e+03 1.05467262e+03 1.05421816e+03 1.05376582e+03
       1.05331561e+03 1.05286753e+03 1.05242157e+03 1.05197774e+03
       1.05153603e+03 1.05109645e+03 1.05065900e+03 1.05022368e+03
       1.04979048e+03 1.04935941e+03 1.04893046e+03 1.04850364e+03
       1.04807895e+03 1.04765638e+03 1.04723594e+03 1.04681763e+03
       1.04640144e+03 1.04598738e+03 1.04557545e+03 1.04516564e+03
       1.04475796e+03 1.04435241e+03 1.04394898e+03 1.04354768e+03
       1.04314851e+03 1.04275146e+03 1.04235654e+03 1.04196374e+03
       1.04157307e+03 1.04118453e+03 1.04079812e+03 1.04041383e+03
       1.04003167e+03 1.03965163e+03 1.03927372e+03 1.03889794e+03
       1.03852429e+03 1.03815276e+03 1.03778335e+03 1.03741608e+03
       1.03705093e+03 1.03668790e+03 1.03632701e+03 1.03596824e+03
       1.03561159e+03 1.03525708e+03 1.03490469e+03 1.03455442e+03
       1.03420628e+03 1.03386027e+03 1.03351639e+03 1.03317463e+03
       1.03283500e+03 1.03249750e+03 1.03216212e+03 1.03182887e+03
       1.03149774e+03 1.03116874e+03 1.03084187e+03 1.03051712e+03
       1.03019451e+03 1.02987401e+03 1.02955565e+03 1.02923941e+03
       1.02892529e+03 1.02861331e+03 1.02830345e+03 1.02799571e+03
       1.02769011e+03]
    ''',
    '''
      [7.08592223e+02 7.08461314e+02 7.08330278e+02 7.08199117e+02
       7.08067833e+02 7.07936426e+02 7.07804899e+02 7.07673252e+02
       7.07541488e+02 7.07409607e+02 7.07277611e+02 7.07145501e+02
       7.07013280e+02 7.06880947e+02 7.06748504e+02 7.06615953e+02
       7.06483294e+02 7.06350529e+02 7.06217659e+02 7.06084685e+02
       7.05951609e+02 7.05818430e+02 7.05685151e+02 7.05551773e+02
       7.05418296e+02 7.05284721e+02 7.05151050e+02 7.05017283e+02
       7.04883421e+02 7.04749466e+02 7.04615418e+02 7.04481278e+02
       7.04347046e+02 7.04212725e+02 7.04078314e+02 7.03943814e+02
       7.03809227e+02 7.03674553e+02 7.03539792e+02 7.03404946e+02
       7.03270015e+02 7.03134999e+02 7.02999901e+02 7.02864720e+02
       7.02729457e+02 7.02594112e+02 7.02458687e+02 7.02323181e+02
       7.02187597e+02 7.02051933e+02 7.01916191e+02 7.01780372e+02
       7.01644475e+02 7.01508502e+02 7.01372453e+02 7.01236329e+02
       7.01100129e+02 7.00963855e+02 7.00827508e+02 7.00691086e+02
       7.00554592e+02 7.00418026e+02 7.00281387e+02 7.00144677e+02
       7.00007896e+02 6.99871045e+02 6.99734123e+02 6.99597131e+02
       6.99460070e+02 6.99322940e+02 6.99185741e+02 6.99048474e+02
       6.98911139e+02 6.98773737e+02 6.98636267e+02 6.98498731e+02
       6.98361128e+02 6.98223459e+02 6.98085725e+02 6.97947925e+02
       6.97810059e+02 6.97672129e+02 6.97534135e+02 6.97396076e+02
       6.97257953e+02 6.97119767e+02 6.96981517e+02 6.96843204e+02
       6.96704829e+02 6.96566390e+02 6.96427890e+02 6.96289327e+02
       6.96150702e+02 6.96012016e+02 6.95873268e+02 6.95734459e+02
       6.95595589e+02 6.95456659e+02 6.95317668e+02 6.95178616e+02
       6.95039505e+02]
    ''',
  )
# ---
# name: test_live_oil_velocity
  '''
  [9.79594672e+02 9.79103580e+02 9.78616566e+02 9.78133636e+02
   9.77654793e+02 9.77180044e+02 9.76709392e+02 9.76242843e+02
   9.75780400e+02 9.75322070e+02 9.74867857e+02 9.74417765e+02
   9.73971799e+02 9.73529964e+02 9.73092265e+02 9.72658707e+02
   9.72229294e+02 9.71804031e+02 9.71382923e+02 9.70965975e+02
   9.70553191e+02 9.70144577e+02 9.69740136e+02 9.69339874e+02
   9.68943795e+02 9.68551904e+02 9.68164206e+02 9.67780706e+02
   9.67401409e+02 9.67026318e+02 9.66655439e+02 9.66288777e+02
   9.65926336e+02 9.65568121e+02 9.65214137e+02 9.64864389e+02
   9.64518880e+02 9.64177617e+02 9.63840603e+02 9.63507844e+02
   9.63179344e+02 9.62855107e+02 9.62535140e+02 9.62219445e+02
   9.61908028e+02 9.61600894e+02 9.61298048e+02 9.60999494e+02
   9.60705236e+02 9.60415280e+02 9.60129630e+02 9.59848291e+02
   9.59571267e+02 9.59298564e+02 9.59030186e+02 9.58766137e+02
   9.58506423e+02 9.58251048e+02 9.58000017e+02 9.57753334e+02
   9.57511004e+02 9.57273032e+02 9.57039422e+02 9.56810179e+02
   9.56585309e+02 9.56364814e+02 9.56148701e+02 9.55936974e+02
   9.55729637e+02 9.55526695e+02 9.55328153e+02 9.55134016e+02
   9.54944287e+02 9.54758973e+02 9.54578076e+02 9.54401603e+02
   9.54229558e+02 9.54061945e+02 9.53898769e+02 9.53740035e+02
   9.53585747e+02 9.53435910e+02 9.53290528e+02 9.53149607e+02
   9.53013151e+02 9.52881164e+02 9.52753652e+02 9.52630618e+02
   9.52512068e+02 9.52398005e+02 9.52288436e+02 9.52183363e+02
   9.52082793e+02 9.51986729e+02 9.51895176e+02 9.51808139e+02
   9.51725623e+02 9.51647631e+02 9.51574169e+02 9.51505242e+02
   9.51440853e+02]
  '''
# ---
# name: test_max_gor_standing
  '''
  [1.54250077e+02 1.54891422e+02 1.55530861e+02 1.56168394e+02
   1.56804021e+02 1.57437741e+02 1.58069554e+02 1.58699459e+02
   1.59327457e+02 1.59953546e+02 1.60577728e+02 1.61200001e+02
   1.61820366e+02 1.62438823e+02 1.63055372e+02 1.63670013e+02
   1.64282746e+02 1.64893571e+02 1.65502488e+02 1.66109499e+02
   1.66714602e+02 1.67317799e+02 1.67919090e+02 1.68518476e+02
   1.69115956e+02 1.69711532e+02 1.70305204e+02 1.70896972e+02
   1.71486838e+02 1.72074801e+02 1.72660864e+02 1.73245025e+02
   1.73827288e+02 1.74407651e+02 1.74986116e+02 1.75562685e+02
   1.76137357e+02 1.76710134e+02 1.77281017e+02 1.77850007e+02
   1.78417105e+02 1.78982313e+02 1.79545630e+02 1.80107060e+02
   1.80666602e+02 1.81224258e+02 1.81780029e+02 1.82333917e+02
   1.82885923e+02 1.83436049e+02 1.83984295e+02 1.84530663e+02
   1.85075155e+02 1.85617771e+02 1.86158515e+02 1.86697386e+02
   1.87234387e+02 1.87769520e+02 1.88302785e+02 1.88834185e+02
   1.89363721e+02 1.89891395e+02 1.90417208e+02 1.90941163e+02
   1.91463261e+02 1.91983504e+02 1.92501893e+02 1.93018431e+02
   1.93533119e+02 1.94045959e+02 1.94556954e+02 1.95066104e+02
   1.95573412e+02 1.96078880e+02 1.96582510e+02 1.97084304e+02
   1.97584264e+02 1.98082392e+02 1.98578689e+02 1.99073159e+02
   1.99565802e+02 2.00056622e+02 2.00545620e+02 2.01032799e+02
   2.01518160e+02 2.02001706e+02 2.02483440e+02 2.02963362e+02
   2.03441476e+02 2.03917783e+02 2.04392287e+02 2.04864988e+02
   2.05335891e+02 2.05804996e+02 2.06272306e+02 2.06737823e+02
   2.07201551e+02 2.07663490e+02 2.08123645e+02 2.08582016e+02
   2.09038606e+02]
  '''
# ---
# name: test_oil_prop
  tuple(
    '''
      [1.06877712e+03 1.06826099e+03 1.06774698e+03 1.06723510e+03
       1.06672535e+03 1.06621772e+03 1.06571222e+03 1.06520884e+03
       1.06470760e+03 1.06420847e+03 1.06371148e+03 1.06321661e+03
       1.06272387e+03 1.06223325e+03 1.06174477e+03 1.06125840e+03
       1.06077417e+03 1.06029206e+03 1.05981208e+03 1.05933422e+03
       1.05885849e+03 1.05838489e+03 1.05791341e+03 1.05744406e+03
       1.05697684e+03 1.05651174e+03 1.05604877e+03 1.05558793e+03
       1.05512921e+03 1.05467262e+03 1.05421816e+03 1.05376582e+03
       1.05331561e+03 1.05286753e+03 1.05242157e+03 1.05197774e+03
       1.05153603e+03 1.05109645e+03 1.05065900e+03 1.05022368e+03
       1.04979048e+03 1.04935941e+03 1.04893046e+03 1.04850364e+03
       1.04807895e+03 1.04765638e+03 1.04723594e+03 1.04681763e+03
       1.04640144e+03 1.04598738e+03 1.04557545e+03 1.04516564e+03
       1.04475796e+03 1.04435241e+03 1.04394898e+03 1.04354768e+03
       1.04314851e+03 1.04275146e+03 1.04235654e+03 1.04196374e+03
       1.04157307e+03 1.04118453e+03 1.04079812e+03 1.04041383e+03
       1.04003167e+03 1.03965163e+03 1.03927372e+03 1.03889794e+03
       1.03852429e+03 1.03815276e+03 1.03778335e+03 1.03741608e+03
       1.03705093e+03 1.03668790e+03 1.03632701e+03 1.03596824e+03
       1.03561159e+03 1.03525708e+03 1.03490469e+03 1.03455442e+03
       1.03420628e+03 1.03386027e+03 1.03351639e+03 1.03317463e+03
       1.03283500e+03 1.03249750e+03 1.03216212e+03 1.03182887e+03
       1.03149774e+03 1.03116874e+03 1.03084187e+03 1.03051712e+03
       1.03019451e+03 1.02987401e+03 1.02955565e+03 1.02923941e+03
       1.02892529e+03 1.02861331e+03 1.02830345e+03 1.02799571e+03
       1.02769011e+03]
    ''',
    '''
      [7.08592223e+02 7.08461314e+02 7.08330278e+02 7.08199117e+02
       7.08067833e+02 7.07936426e+02 7.07804899e+02 7.07673252e+02
       7.07541488e+02 7.07409607e+02 7.07277611e+02 7.07145501e+02
       7.07013280e+02 7.06880947e+02 7.06748504e+02 7.06615953e+02
       7.06483294e+02 7.06350529e+02 7.06217659e+02 7.06084685e+02
       7.05951609e+02 7.05818430e+02 7.05685151e+02 7.05551773e+02
       7.05418296e+02 7.05284721e+02 7.05151050e+02 7.05017283e+02
       7.04883421e+02 7.04749466e+02 7.04615418e+02 7.04481278e+02
       7.04347046e+02 7.04212725e+02 7.04078314e+02 7.03943814e+02
       7.03809227e+02 7.03674553e+02 7.03539792e+02 7.03404946e+02
       7.03270015e+02 7.03134999e+02 7.02999901e+02 7.02864720e+02
       7.02729457e+02 7.02594112e+02 7.02458687e+02 7.02323181e+02
       7.02187597e+02 7.02051933e+02 7.01916191e+02 7.01780372e+02
       7.01644475e+02 7.01508502e+02 7.01372453e+02 7.01236329e+02
       7.01100129e+02 7.00963855e+02 7.00827508e+02 7.00691086e+02
       7.00554592e+02 7.00418026e+02 7.00281387e+02 7.00144677e+02
       7.00007896e+02 6.99871045e+02 6.99734123e+02 6.99597131e+02
       6.99460070e+02 6.99322940e+02 6.99185741e+02 6.99048474e+02
       6.98911139e+02 6.98773737e+02 6.98636267e+02 6.98498731e+02
       6.98361128e+02 6.98223459e+02 6.98085725e+02 6.97947925e+02
       6.97810059e+02 6.97672129e+02 6.97534135e+02 6.97396076e+02
       6.97257953e+02 6.97119767e+02 6.96981517e+02 6.96843204e+02
       6.96704829e+02 6.96566390e+02 6.96427890e+02 6.96289327e+02
       6.96150702e+02 6.96012016e+02 6.95873268e+02 6.95734459e+02
       6.95595589e+02 6.95456659e+02 6.95317668e+02 6.95178616e+02
       6.95039505e+02]
    ''',
    '''
      [8.09413936e+08 8.08482970e+08 8.07555743e+08 8.06632249e+08
       8.05712485e+08 8.04796446e+08 8.03884127e+08 8.02975524e+08
       8.02070632e+08 8.01169447e+08 8.00271965e+08 7.99378180e+08
       7.98488088e+08 7.97601685e+08 7.96718966e+08 7.95839925e+08
       7.94964560e+08 7.94092864e+08 7.93224833e+08 7.92360462e+08
       7.91499747e+08 7.90642683e+08 7.89789265e+08 7.88939489e+08
       7.88093349e+08 7.87250841e+08 7.86411960e+08 7.85576702e+08
       7.84745060e+08 7.83917032e+08 7.83092612e+08 7.82271795e+08
       7.81454576e+08 7.80640950e+08 7.79830913e+08 7.79024460e+08
       7.78221586e+08 7.77422287e+08 7.76626556e+08 7.75834391e+08
       7.75045785e+08 7.74260733e+08 7.73479232e+08 7.72701277e+08
       7.71926861e+08 7.71155981e+08 7.70388632e+08 7.69624809e+08
       7.68864508e+08 7.68107722e+08 7.67354448e+08 7.66604681e+08
       7.65858416e+08 7.65115648e+08 7.64376373e+08 7.63640585e+08
       7.62908279e+08 7.62179452e+08 7.61454099e+08 7.60732214e+08
       7.60013792e+08 7.59298830e+08 7.58587322e+08 7.57879264e+08
       7.57174650e+08 7.56473477e+08 7.55775739e+08 7.55081432e+08
       7.54390551e+08 7.53703092e+08 7.53019049e+08 7.52338419e+08
       7.51661196e+08 7.50987375e+08 7.50316953e+08 7.49649925e+08
       7.48986285e+08 7.48326030e+08 7.47669155e+08 7.47015655e+08
       7.46365526e+08 7.45718762e+08 7.45075361e+08 7.44435316e+08
       7.43798624e+08 7.43165280e+08 7.42535279e+08 7.41908618e+08
       7.41285291e+08 7.40665294e+08 7.40048623e+08 7.39435273e+08
       7.38825241e+08 7.38218520e+08 7.37615108e+08 7.37014999e+08
       7.36418190e+08 7.35824675e+08 7.35234451e+08 7.34647514e+08
       7.34063858e+08]
    ''',
  )
# ---
# name: test_oil_prop_bw
  tuple(
    '''
      [9.79594672e+02 9.79103580e+02 9.78616566e+02 9.78133636e+02
       9.77654793e+02 9.77180044e+02 9.76709392e+02 9.76242843e+02
       9.75780400e+02 9.75322070e+02 9.74867857e+02 9.74417765e+02
       9.73971799e+02 9.73529964e+02 9.73092265e+02 9.72658707e+02
       9.72229294e+02 9.71804031e+02 9.71382923e+02 9.70965975e+02
       9.70553191e+02 9.70144577e+02 9.69740136e+02 9.69339874e+02
       9.68943795e+02 9.68551904e+02 9.68164206e+02 9.67780706e+02
       9.67401409e+02 9.67026318e+02 9.66655439e+02 9.66288777e+02
       9.65926336e+02 9.65568121e+02 9.65214137e+02 9.64864389e+02
       9.64518880e+02 9.64177617e+02 9.63840603e+02 9.63507844e+02
       9.63179344e+02 9.62855107e+02 9.62535140e+02 9.62219445e+02
       9.61908028e+02 9.61600894e+02 9.61298048e+02 9.60999494e+02
       9.60705236e+02 9.60415280e+02 9.60129630e+02 9.59848291e+02
       9.59571267e+02 9.59298564e+02 9.59030186e+02 9.58766137e+02
       9.58506423e+02 9.58251048e+02 9.58000017e+02 9.57753334e+02
       9.57511004e+02 9.57273032e+02 9.57039422e+02 9.56810179e+02
       9.56585309e+02 9.56364814e+02 9.56148701e+02 9.55936974e+02
       9.55729637e+02 9.55526695e+02 9.55328153e+02 9.55134016e+02
       9.54944287e+02 9.54758973e+02 9.54578076e+02 9.54401603e+02
       9.54229558e+02 9.54061945e+02 9.53898769e+02 9.53740035e+02
       9.53585747e+02 9.53435910e+02 9.53290528e+02 9.53149607e+02
       9.53013151e+02 9.52881164e+02 9.52753652e+02 9.52630618e+02
       9.52512068e+02 9.52398005e+02 9.52288436e+02 9.52183363e+02
       9.52082793e+02 9.51986729e+02 9.51895176e+02 9.51808139e+02
       9.51725623e+02 9.51647631e+02 9.51574169e+02 9.51505242e+02
       9.51440853e+02]
    ''',
    '''
      [7.02134661e+02 7.01875429e+02 7.01616337e+02 7.01357386e+02
       7.01098576e+02 7.00839907e+02 7.00581379e+02 7.00322991e+02
       7.00064744e+02 6.99806637e+02 6.99548671e+02 6.99290845e+02
       6.99033160e+02 6.98775615e+02 6.98518211e+02 6.98260946e+02
       6.98003822e+02 6.97746838e+02 6.97489993e+02 6.97233289e+02
       6.96976725e+02 6.96720301e+02 6.96464016e+02 6.96207872e+02
       6.95951867e+02 6.95696001e+02 6.95440275e+02 6.95184689e+02
       6.94929242e+02 6.94673935e+02 6.94418767e+02 6.94163739e+02
       6.93908849e+02 6.93654099e+02 6.93399488e+02 6.93145016e+02
       6.92890683e+02 6.92636489e+02 6.92382434e+02 6.92128518e+02
       6.91874740e+02 6.91621102e+02 6.91367602e+02 6.91114240e+02
       6.90861017e+02 6.90607933e+02 6.90354987e+02 6.90102180e+02
       6.89849510e+02 6.89596979e+02 6.89344586e+02 6.89092332e+02
       6.88840215e+02 6.88588237e+02 6.88336396e+02 6.88084693e+02
       6.87833128e+02 6.87581701e+02 6.87330412e+02 6.87079260e+02
       6.86828246e+02 6.86577369e+02 6.86326630e+02 6.86076028e+02
       6.85825564e+02 6.85575237e+02 6.85325047e+02 6.85074994e+02
       6.84825078e+02 6.84575300e+02 6.84325658e+02 6.84076153e+02
       6.83826785e+02 6.83577554e+02 6.83328460e+02 6.83079502e+02
       6.82830681e+02 6.82581996e+02 6.82333448e+02 6.82085037e+02
       6.81836761e+02 6.81588622e+02 6.81340620e+02 6.81092753e+02
       6.80845022e+02 6.80597428e+02 6.80349969e+02 6.80102647e+02
       6.79855460e+02 6.79608409e+02 6.79361494e+02 6.79114714e+02
       6.78868070e+02 6.78621562e+02 6.78375189e+02 6.78128951e+02
       6.77882849e+02 6.77636882e+02 6.77391050e+02 6.77145353e+02
       6.76899792e+02]
    ''',
    '''
      [6.73772438e+08 6.72848542e+08 6.71931219e+08 6.71020460e+08
       6.70116256e+08 6.69218598e+08 6.68327478e+08 6.67442888e+08
       6.66564819e+08 6.65693261e+08 6.64828208e+08 6.63969651e+08
       6.63117581e+08 6.62271990e+08 6.61432871e+08 6.60600214e+08
       6.59774013e+08 6.58954259e+08 6.58140945e+08 6.57334062e+08
       6.56533603e+08 6.55739561e+08 6.54951927e+08 6.54170694e+08
       6.53395856e+08 6.52627403e+08 6.51865330e+08 6.51109629e+08
       6.50360293e+08 6.49617314e+08 6.48880686e+08 6.48150401e+08
       6.47426454e+08 6.46708836e+08 6.45997541e+08 6.45292563e+08
       6.44593895e+08 6.43901531e+08 6.43215463e+08 6.42535686e+08
       6.41862193e+08 6.41194978e+08 6.40534035e+08 6.39879357e+08
       6.39230939e+08 6.38588775e+08 6.37952858e+08 6.37323183e+08
       6.36699745e+08 6.36082536e+08 6.35471553e+08 6.34866789e+08
       6.34268239e+08 6.33675897e+08 6.33089758e+08 6.32509817e+08
       6.31936069e+08 6.31368508e+08 6.30807130e+08 6.30251929e+08
       6.29702902e+08 6.29160042e+08 6.28623345e+08 6.28092806e+08
       6.27568422e+08 6.27050186e+08 6.26538096e+08 6.26032146e+08
       6.25532333e+08 6.25038652e+08 6.24551098e+08 6.24069669e+08
       6.23594359e+08 6.23125165e+08 6.22662083e+08 6.22205110e+08
       6.21754241e+08 6.21309474e+08 6.20870804e+08 6.20438228e+08
       6.20011742e+08 6.19591344e+08 6.19177031e+08 6.18768798e+08
       6.18366643e+08 6.17970563e+08 6.17580555e+08 6.17196617e+08
       6.16818744e+08 6.16446936e+08 6.16081189e+08 6.15721500e+08
       6.15367867e+08 6.15020289e+08 6.14678761e+08 6.14343284e+08
       6.14013853e+08 6.13690467e+08 6.13373125e+08 6.13061824e+08
       6.12756562e+08]
    ''',
  )
# ---
